@@ -1,6 +1,8 @@
 2016-02-07  Benno Schulenberg  <bensberg@justemail.net>
 	* src/files.c (update_poshistory): Don't put files in the history list
 	when they have the default cursor position (line 1, column 1).
+	* src/files.c (write_file): Avoid a pointless lstat() when not writing
+	to a temp file, and in the bargain elide two variables.
 
 2016-02-06  Benno Schulenberg  <bensberg@justemail.net>
 	* src/files.c (write_file): Remove the --nofollow option that hasn't
